[package]
name = "xlsx_to_csv_gz"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xlsx_to_csv_gz"
path = "src/main.rs"

[dependencies]
calamine = { version = "0.24", features = ["dates"] }
zip = { version = "2.1", default-features = false, features = ["deflate"] }
csv = "1.3"
flate2 = { version = "1.0", features = ["zlib"] }
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1